--- a/my_set/makefile
+++ b/my_set/makefile
@@ -1,2 +1,3 @@
 all:
-	g++ -std=c++11 ../object_repres/taginfo.cpp ../object_repres/boxing2.cpp ../object_repres/go.cpp ../Roots2/collect.cpp ../Roots2/stack.cpp ../gc_new/gc_new.cpp my_set.cpp -O0 -lpthread -o output
+	g++ -std=c++11 ../object_repres/taginfo.cpp ../object_repres/boxing2.cpp ../object_repres/go.cpp ../Roots2/collect.cpp \
+	../gc_new/gc_new.cpp my_set.cpp -O0 -lpthread -o output
