fix tests: now all tests except threads_merge_sort are correct

--- a/tests/gc_tests/makefile
+++ b/tests/gc_tests/makefile
@@ -10,7 +10,7 @@ all: output
 output: $(SOURCE)
 		# $(CPPC) -Wl,--no-as-needed -std=c++11 -O0 $(SOURCE) -pthread -lpthread $(LOAD_LIBRARY) -o test1
 		# $(CPPC) -Wl,--no-as-needed -std=c++11 -O0 $(SOURCE) -pthread -lpthread $(LOAD_LIBRARY) -o test2
-		$(CPPC) -Wl,--no-as-needed -std=c++11 -O0 $(SOURCE) -pthread -lpthread $(LOAD_LIBRARY) -o test3
+		$(CPPC) -Wl,--no-as-needed -std=c++11 -O0 $(SOURCE) -pthread -lpthread $(LOAD_LIBRARY) -g -o test3
 
 clean:
 		# rm -rf test1
