--- a/tests/binary_tree_sort/makefile
+++ b/tests/binary_tree_sort/makefile
@@ -5,7 +5,7 @@ LOAD_LIBRARY=-L /usr/local/lib/ -l gc -l pthread -l msmalloc
 all: output
 
 output: $(SOURCE)
-	$(CPPC) -std=c++11 -O0 $(SOURCE) $(LOAD_LIBRARY) -o output
+	$(CPPC) -std=c++11 -O0 $(SOURCE) $(LOAD_LIBRARY) -g -o output
 
 clean:
 	rm -rf output
