--- a/tests/gc_ptr_test/makefile
+++ b/tests/gc_ptr_test/makefile
@@ -1,6 +1,6 @@
 SOURCE=gc_ptr_test.cpp
 CPPC=g++
-LOAD_LIBRARY=-L /usr/local/lib/ -l gc -l pthread -l msmalloc
+LOAD_LIBRARY=-L /usr/local/lib/ -l preciseGC -l pthread -l msmalloc
 
 all: output
 
