--- a/sources/Makefile.am
+++ b/sources/Makefile.am
@@ -1,8 +1,8 @@
 AM_CXXFLAGS = -std=c++11 -fPIC -O3
-lib_LTLIBRARIES = libgc.la
-pkginclude_HEADERS = libgc.h gc_new.h gc_ptr.h go.h meta_information.h stack.h taginfo.h
-libgc_la_LIBADD = -lmsmalloc
-libgc_la_CFLAGS = -std=c++11 -fPIC -O3
-libgc_la_SOURCES = gc_new.cpp gc_new.h gc_ptr.h\
-go.cpp go.h libgc.h meta_information.cpp meta_information.h\
-stack.cpp stack.h taginfo.cpp taginfo.h
+lib_LTLIBRARIES = libprecisegc.la
+pkginclude_HEADERS = libprecisegc.h gc_new.h gc_ptr.h go.h meta_information.h stack.h taginfo.h debug_print.h
+libprecisegc_la_LIBADD = -lmsmalloc
+libprecisegc_la_CFLAGS = -std=c++11 -fPIC -O3
+libprecisegc_la_SOURCES = gc_new.cpp gc_new.h gc_ptr.h\
+go.cpp go.h libprecisegc.h meta_information.cpp meta_information.h\
+stack.cpp stack.h taginfo.cpp taginfo.h debug_print.h
