--- a/tests/a_lot_of_garbage_string/makefile
+++ b/tests/a_lot_of_garbage_string/makefile
@@ -1,6 +1,6 @@
 SOURCE=a_lot_of_garbage.cpp GCString.cpp
 CPPC=g++
-LOAD_LIBRARY=-L /usr/local/lib/ -l preciseGC -l pthread -l msmalloc
+LOAD_LIBRARY=-L /usr/local/lib/ -l precisegc -l pthread -l msmalloc
 
 all: output
 
