--- a/tests/arrayTests/makefile
+++ b/tests/arrayTests/makefile
@@ -1,6 +1,6 @@
 SOURCE=arrayOfSingleObjects.cpp
 CPPC=g++
-LOAD_LIBRARY=-L /usr/local/lib/ -l preciseGC -l pthread -l msmalloc
+LOAD_LIBRARY=-L /usr/local/lib/ -l precisegc -l pthread -l msmalloc
 
 all: output
 
