--- a/tests/binary_tree_sort/CMakeLists.txt
+++ b/tests/binary_tree_sort/CMakeLists.txt
@@ -7,12 +7,9 @@ add_executable(${TEST} EXCLUDE_FROM_ALL ${SOURCE})
 
 find_path(PRECISEGC_PATH libprecisegc/libprecisegc.h)
 include_directories(${PRECISEGC_PATH})
-find_path(MSMALLOC_PATH msmalloc.h)
-include_directories(${MSMALLOC_PATH})
 
-find_library(MSMALLOC_LIB msmalloc REQUIRED)
 find_library(PRECISEGC_LIB precisegc REQUIRED)
 find_library(PTHREAD_LIB pthread REQUIRED)
 
-set(LIBS ${MSMALLOC_LIB} ${PRECISEGC_LIB} ${PTHREAD_LIB})
+set(LIBS ${PRECISEGC_LIB} ${PTHREAD_LIB})
 target_link_libraries(${TEST} ${LIBS})
