--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC -O3 -g")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC -O0 -g")
 
 set(precisegc_LIB_SRCS
     gc_new.cpp
@@ -34,4 +34,4 @@ set_target_properties(precisegc PROPERTIES VERSION 1.0.0 SOVERSION 1)
 install(TARGETS precisegc
     LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX})
 
-install(FILES libprecisegc.h gc_new.h gc_ptr.h go.h meta_information.h stack.h taginfo.h debug_print.h deref_roots.h threading.h DESTINATION include/libprecisegc)
+install(FILES libprecisegc.h gc_new.h gc_ptr.h go.h meta_information.h stack.h taginfo.h debug_print.h deref_roots.h threading.h malloc.h DESTINATION include/libprecisegc)
