--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,4 +35,5 @@ endforeach()
 add_custom_target(tests
     DEPENDS gc_inside_method
             binary_tree_sort
-            concurrency)
+            concurrency
+            mark-and-copy-test)
