--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -1,12 +1,12 @@
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC -O0 -g")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC -O3 -pg")
 
 set(precisegc_LIB_SRCS
-    gc_new.cpp
     gc_new.h
     gc_ptr.h
     go.cpp
     go.h
     libprecisegc.h
+    tlvars.h
     meta_information.cpp
     meta_information.h
     stack.cpp
@@ -16,7 +16,8 @@ set(precisegc_LIB_SRCS
     debug_print.h
     deref_roots.cpp
     threading.cpp
-    malloc.cpp)
+    malloc.cpp
+    tlvars.cpp)
 
 add_library(precisegc SHARED ${precisegc_LIB_SRCS})
 
@@ -34,4 +35,4 @@ set_target_properties(precisegc PROPERTIES VERSION 1.0.0 SOVERSION 1)
 install(TARGETS precisegc
     LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX})
 
-install(FILES libprecisegc.h gc_new.h gc_ptr.h go.h meta_information.h stack.h taginfo.h debug_print.h deref_roots.h threading.h malloc.h DESTINATION include/libprecisegc)
+install(FILES libprecisegc.h tlvars.h gc_new.h gc_ptr.h go.h meta_information.h stack.h taginfo.h debug_print.h deref_roots.h threading.h malloc.h DESTINATION include/libprecisegc)
