Even more speedup

--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC -O3 -pg")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC -O2")
 
 set(precisegc_LIB_SRCS
     gc_new.h
