switch to new meta model

--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -10,8 +10,6 @@ set(precisegc_LIB_SRCS
     meta_information.h
     stack.cpp
     stack.h
-    taginfo.cpp
-    taginfo.h
     debug_print.h
     deref_roots.cpp
     threading.cpp
@@ -29,4 +27,4 @@ set_target_properties(precisegc PROPERTIES VERSION 1.0.0 SOVERSION 1)
 install(TARGETS precisegc
     LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX})
 
-install(FILES libprecisegc.h tlvars.h gc_new.h gc_ptr.h go.h meta_information.h stack.h taginfo.h debug_print.h deref_roots.h threading.h malloc.h DESTINATION include/libprecisegc)
+install(FILES libprecisegc.h tlvars.h gc_new.h gc_ptr.h go.h meta_information.h stack.h debug_print.h deref_roots.h threading.h malloc.h DESTINATION include/libprecisegc)
